# Prospect

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/blue_noise/: source.txt
assets/cerberus/: cerberus.mtl
assets/pointcloud/: .gitignore  data_source.txt
assets/quad/: quad.mtl
assets/sphere/: sphere.mtl
assets/sponza/: sponza.mtl
assets/test_room/: LICENSE  test_room.mtl
shaders/: blit.frag.glsl  brdf.glsl  camera_model.glsl  camera_uniforms.h  common.glsl  compilation.h  default.frag.glsl  default.vert.glsl  g_buffer_read.glsl  g_buffer_write.glsl  mesh_attributes.glsl  mesh_attributes.h  quad.vert.glsl  scene_uniforms.h  shader_constants.h  shader_locations.h  shader_types.h  ssao_data.h  uniform_locations.h
shaders/compute/: brdf_map.comp.glsl  create_sh.comp.glsl
shaders/etc/: aces.glsl  octahedral.glsl  pointcloud.frag.glsl  pointcloud.vert.glsl  pointcloud_data.h  resize.comp.glsl  unpack_normals.comp.glsl  visualize_normals.comp.glsl  (+1 more)
src/: App.h  AppSelector.h  BasicMaterial.cpp  BasicMaterial.h  BloomPass.cpp  BloomPass.h  BufferObject.h  CameraBase.cpp  CameraBase.h  CompleteMaterial.cpp  CompleteMaterial.h  FinalPass.cpp  FinalPass.h  FpsCamera.cpp  FpsCamera.h  FullscreenQuad.h  GBuffer.cpp  GBuffer.h  GeometryPass.cpp  GeometryPass.h  GuiSystem.cpp  GuiSystem.h  IBLDemo.cpp  IBLDemo.h  IBLPass.cpp  IBLPass.h  Input.cpp  Input.h  Lambertian.cpp  Lambertian.h  LightBuffer.cpp  LightBuffer.h  LightPass.cpp  LightPass.h  Logging.h  Material.h  MaterialFactory.cpp  MaterialFactory.h  MaterialSystem.cpp  MaterialSystem.h  (+33 more)
(+34 files in other folders)
